add less add semantic-ui add basic ui structure (menu and messages)

--- a/client/main.html
+++ b/client/main.html
@@ -5,6 +5,33 @@
 
 <body>
 
-    <h1>Welcome to our one-hour meteor chat!</h1>
+<div class="ui fixed inverted borderless menu">
+    <div class="ui container">
+        <div class="header item">
+            <img src="meteor.png" alt="Meteor"/>
+            One hour Meteor chat!!!
+        </div>
+    </div>
+</div>
+
+<div class="ui main container">
+    <div id="messages" class="ui comments">
+        <div class="comment">
+            <div class="content">
+
+                <span class="author">Julien</span>
+
+                <div class="metadata">
+                    <span class="date">22 Sept 2015 - 11:25</span>
+                </div>
+
+                <div class="text">
+                    My message
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
 
 </body>
