--- a/client/main.html
+++ b/client/main.html
@@ -15,23 +15,9 @@
 </div>
 
 <div class="ui main container">
-    <div id="messages" class="ui comments">
-        <div class="comment">
-            <div class="content">
 
-                <span class="author">Julien</span>
+    {{> messagesList}}
 
-                <div class="metadata">
-                    <span class="date">22 Sept 2015 - 11:25</span>
-                </div>
-
-                <div class="text">
-                    My message
-                </div>
-
-            </div>
-        </div>
-    </div>
 </div>
 
 </body>
