add user accounts packages hook up username with new message add login welcome message add hand style for login welcome message

--- a/client/main.html
+++ b/client/main.html
@@ -11,6 +11,9 @@
             <img src="meteor.png" alt="Meteor"/>
             One hour Meteor chat!!!
         </div>
+        <div class="right item">
+            {{> loginButtons}}
+        </div>
     </div>
 </div>
 
